--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -24,7 +24,7 @@ jobs:
           touch out/.nojekyll
 
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4.4.0
+        uses: peaceiris/actions-gh-pages@v3
         with:
           branch: gh-pages
           folder: out
