--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -4,28 +4,23 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
 
     steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
         with:
-          node-version: 16
+          node-version: ${{ matrix.node-version }}
           cache: yarn
-
-      - name: Build
-        run: |
-          yarn
-          yarn build
-          yarn export
-          touch out/.nojekyll
-
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          folder: out
+      - run: yarn
+      - run: yarn build
