--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "dev": "ts-node --project tsconfig.server.json server/index.ts",
-    "build": "next build && tsc --project tsconfig.server.json",
+    "build": "next build && tsc --project tsconfig.server.json && next export",
     "export": "next export",
     "start": "NODE_ENV=production && node dist/index.js",
     "deploy": "gh-pages -b gh-pages -d build",
