--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@commitlint/cli": "^17.3.0",
     "@next/bundle-analyzer": "^13.0.4",
     "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
+    "@types/react": "^18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
