--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,27 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+.idea
+.next
+.vscode
+.yarn
+
 # dependencies
 /node_modules
 /.pnp
+/build
+/out
 .pnp.js
 
 # testing
 /coverage
 
-# next.js
-/.next/
-/out/
-/dist
-
-# production
-/build
-
 # misc
 .DS_Store
-*.pem
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
-
-# local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-.env
