--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "lyminhnghia.github.io",
-  "version": "1.0.0",
-  "private": true,
+  "version": "0.1.0",
   "homepage": "http://lyminhnghia.github.io",
   "author": {
     "email": "lmn2461999@gmail.com",
@@ -17,12 +16,21 @@
     "deploy": "gh-pages -b gh-pages -d build"
   },
   "dependencies": {
-    "@next/font": "13.1.6",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^6.3.0",
+    "next": "15.1.8",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@types/gh-pages": "^6",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.8",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
