--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,13 +8,7 @@
     "plugin:jsx-a11y/recommended",
     "prettier"
   ],
-  "plugins": [
-    "@typescript-eslint",
-    "react",
-    "react-hooks",
-    "jsx-a11y",
-    "prettier"
-  ],
+  "plugins": ["@typescript-eslint", "react", "react-hooks", "jsx-a11y", "prettier"],
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
@@ -45,4 +39,4 @@
     "es2021": true,
     "node": true
   }
-} 
+}
